# ml-attacks

./: .gitignore  README.md  hubconf.py  pyproject.toml
papers/: 2014-szegedy-et-al.md  2017-stevens-et-al.md  2017-xiao-et-al.md  2019-cve-proofpoint.md  2020-slack-et-al.md  README.md  todo.md
src/copycat/: README.md  attacker.py  model.pt  run.sh  victim.py
src/fgsm/: README.md  attacker.py  model.pt  victim.py
src/pickle_deserialization/: README.md  attacker.py  innocent_model.pt  malicious_model.pt  run.sh  victim.py
src/pytorch_deserialization/: README.md  attacker.py  model.pt  run.sh  victim.py
src/pytorch_hub/: README.md  huggingface_victim.py  victim.py
src/pytorch_steganography/: .gitignore  README.md  receiver.py  sender.py
src/pytorch_steganography/models/: modified.pt  original.pt
