[tool.poetry]
name = "ml-attacks"
version = "0.0.0"
description = "Demo attacks on ML systems and how to defend against them"
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
