[tool.poetry]
name = "ml-attacks"
version = "0.0.0"
description = "Demo attacks on ML systems and how to defend against them"
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]

[tool.poetry.dependencies]
fickling = "^0.0.1"
Pillow = "^8.2.0"
python = "^3.8"
torch = "^1.8.0"
transformers = "^4.4.2"
# These are required for the PyTorch Hub attack but should be removed eventually
importlib-metadata = "^3.7.3"
sentencepiece = "^0.1.95"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
